@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b37238bc3710f50c7159914bfabf39d290cfdb1e ChangeLog
+SHA1 0a376f5cf0259efba4142cc3add178dff307dd8b ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 1dd014a34ebb78e5f6e77f271cf929e1f3710d8f META.yml
-SHA1 6bb106f470ccee69687df5341124983fbb9550c4 Makefile.PL
+SHA1 f55a66dc2ca6de7e241cdb5587941445c0399614 META.yml
+SHA1 61a1d042e59603adb02ce689bc56cc443bc215e6 Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 0dafef8e7d17bb0f6ae39231c8c7e5ef7be7f19d lib/Net/FullAuto.pm
+SHA1 cbd57af6b0b6a28346a16c9da1aa3ec239737018 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 15b442ad7e268218b9156d48bba27c6d84ebcb57 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 1be577943acf291e5dfad66ee336d6fc95aad9d4 lib/Net/FullAuto/FA_Core.pm
+SHA1 abaeca11c675301cf2acc2b3fd0fc3f480ffd352 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUY/WxAAoJEBa/9Pad787EBdEH+wUhVBTMEsxqWEPTRUnGbmwO
-pzYhEQvK+0eLPa0B5Hxh72oMPxyZbpisiVwteHG0sfXHxyHeowN8DztVpgkt+3z+
-enrRBNPpB8jyVrnH2xk2jaqPaeUcrppa229YBCVpivplQBvXfmz2y58dGlw5FSyA
-VhWcNTGqBOIPsrsWqNCo/2nh/tAkXvMAM8qTnYxNHha44EDhMSc4XqLmElTFq6Ha
-UzjNbxLltuJtUCszdpq6uGMLsBGIDdj/FO/bOpS17Rt8Z4gi7FyNw+6n+hQjVBsT
-CMoVSSg/QCqs/x2/Zldnp6XkMcjKvu0Sqy+Q32eo06gLfRslQrgYq03UhbrTHGY=
-=BAjT
+iQEcBAEBAgAGBQJUZ4GaAAoJEBa/9Pad787EmCwH/j7BOH4+SBguFXfEUwnvbW+V
++JLTcEw3phdewGnPoAUqAxvqZnywHNWFTFeYiStSVgZMPlr6JVQHyvxSnMf+9A4J
+0PuF6jJSp2PszxaydlIR9MYlUxFDsrtESTWmD4HDxJY18zFnshvMtjMFjwXblPG0
+PvcmqTd0QDIl1Tlkn+jEv9vYLUY8H7X6qSf2I9eYo2nTxDKIHmjiln95lxdhwH4j
+JF0Lfz/mbugfmS8y+eockZIHn05zVgQNR2q3fybMGZNJOcApAg/QTRxUawbFbahd
+39Ycw1BH7eDoYX67UkNiXAwxxKpjNqSgJI6sHWyoYUxgW/MgQyWjwVMoNf+RxoQ=
+=4Sfl
 -----END PGP SIGNATURE-----
