@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999927';
+our $VERSION='0.999999999929';
 
 
 use 5.005;
