@@ -20,6 +20,13 @@
 #######################################################################
 
 
+2014-11-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999999999929 released.
+
+        * More code added for the AWS EC2 Liferay demo.
+
+
 2014-11-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999999999928 released.
